All voicings notes pass through regex filter, else empty
NC sections should not cache notes from the previous section #179409784